<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:lines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/headerText"
        android:textColor="@color/textColor"
        android:textSize="@dimen/headerTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/quicksortButton"
        style="@style/selectorButtonsStyle"
        android:layout_marginTop="1dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/quicksortButtonText"
        app:layout_constraintBottom_toTopOf="@+id/heapsortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/heapsortButton"
        style="@style/selectorButtonsStyle"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/heapsortButtonText"
        app:layout_constraintBottom_toTopOf="@+id/mergesortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quicksortButton"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/mergesortButton"
        style="@style/selectorButtonsStyle"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/mergesortButtonText"
        app:layout_constraintBottom_toTopOf="@+id/bubblesortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heapsortButton"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bubblesortButton"
        style="@style/selectorButtonsStyle"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/bubblesortButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mergesortButton"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/selectorButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="quicksortButton,heapsortButton,mergesortButton,bubblesortButton" />
</androidx.constraintlayout.widget.ConstraintLayout>