<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SortingActivity">

    <TextView
        android:id="@+id/firstView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/secondView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondView"
        style="@style/arraySortingViews"
        android:layout_width="wrap_content"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/thirdView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thirdView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/fourthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/secondView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fourthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/fifthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thirdView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fifthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/sixthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sixthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/seventhView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fifthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seventhView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/eighthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sixthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eighthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/ninethView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seventhView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ninethView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/tenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eighthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/eleventhView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ninethView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eleventhView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/twelfthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twelfthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/thirteenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eleventhView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thirteenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/fourteenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twelfthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fourteenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/fifteenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thirteenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fifteenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/sixteenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourteenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sixteenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/seventeenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fifteenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seventeenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/eighteenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sixteenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eighteenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/nineteenthView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seventeenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nineteenthView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/twentiethView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eighteenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/twentiethView"
        style="@style/arraySortingViews"
        android:text="@string/digitsStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nineteenthView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/randomButtonText"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSort"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sortButtonText"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/randomButton"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="firstView,secondView,thirdView,fourthView,fifthView,sixthView,seventhView,eighthView,ninethView,tenthView,eleventhView,twelfthView,thirteenthView,fourteenthView,fifteenthView,sixteenthView,seventeenthView,eighteenthView,nineteenthView,twentiethView" />

    <TextView
        android:id="@+id/nameOfSorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/textColor"
        android:textSize="@dimen/headerTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/randomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/backButtonText"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSort"
        app:layout_constraintVertical_bias="0.796" />

</androidx.constraintlayout.widget.ConstraintLayout>